kubernetes/fluxcd/apps/base/changedetection-io/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: changedetection-io
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`changedetection.kube-01.home.majabojarska.dev`)
      kind: Rule
      services:
        - name: changedetection-io
          port: 5000
    - match: Host(`changedetection.home.majabojarska.dev`)
      kind: Rule
      services:
        - name: changedetection-io
          port: 5000
  tls:
    secretName: certificate-secret
