kubernetes/fluxcd/apps/base/changedetection-io/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: changedetection-io-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: changedetection-io
      app.kubernetes.io/name: changedetection-io
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
      ports:
        - protocol: TCP
          port: 5000
